--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,12 +27,12 @@ nav:
     - Home: index.md
     - 使用指南: 使用指南.md
     - 选校梯度: 选校梯度.md
-    - S: 
+    - SSS: 
       - MSECS@Princeton: MSECS@Princeton.md
       - MSCS@Stanford: MSCS@Stanford.md
       - MSCS@UT-Austin: MSCS@UT-Austin.md
       - CSE@MIT: CSE@MIT.md
-    - A+:
+    - SS:
       - MLT@CMU: MLT@CMU.md
       - MSCS@CMU: MSCS@CMU.md
       - MSR@CMU: MSR@CMU.md
@@ -43,7 +43,7 @@ nav:
       - DS@Harvard: DS@Harvard.md
       - EE@Stanford: EE@Stanford.md
       - ICME@Stanford: ICME@Stanford.md
-    - A:
+    - S:
       - MCDS@CMU: MCDS@CMU.md
       - MIIS@CMU: MIIS@CMU.md
       - MSAII@CMU: MSAII@CMU.md
@@ -53,7 +53,7 @@ nav:
       - MSCS@Yale: MSCS@Yale.md
       - MS&E@Stanford: MS&E@Stanford.md
       - DS@UPenn: DS@UPenn.md
-    - A-:
+    - A+:
       - EECS Meng@Berkeley: EECS Meng@Berkeley.md
       - MSIN@CMU: MSIN@CMU.md
       - MSCS@Duke: MSCS@Duke.md
@@ -61,7 +61,7 @@ nav:
       - CS75@UCSD: CS75@UCSD.md
       - MMath-course@Waterloo: MMath-course@Waterloo.md
       - ECE@UT Austin: ECE@UT Austin.md
-    - B+:
+    - A:
       - ScM CS@Brown: ScM CS@Brown.md
       - MSCS@Columbia: MSCS@Columbia.md
       - CM@Cornell Tech: CM@Cornell Tech.md
@@ -72,7 +72,7 @@ nav:
       - ECE@CMU: ECE@CMU.md
       - ECE Meng@UBC: ECE Meng@UBC.md
       - MDSAI@Waterloo: MDSAI@Waterloo.md
-    - B:
+    - A-:
       - SESV@CMU: SESV@CMU.md
       - MSCS@Dartmouth: MSCS@Dartmouth.md
       - CSE@GaTech: CSE@GaTech.md
@@ -84,7 +84,7 @@ nav:
       - ECE@GaTech: ECE@GaTech.md
       - ECE Meng@UIUC: ECE Meng@UIUC.md
       - DS@UMich: DS@UMich.md
-    - B-:
+    - B+:
       - MSE-SS@CMU: MSE-SS@CMU.md
       - MSCS@NYU Courant: MSCS@NYU Courant.md
       - MCS@Rice: MCS@Rice.md
@@ -103,11 +103,11 @@ nav:
       - EC93@UCSD: EC93@UCSD.md
       - ECE Meng@UofT: ECE Meng@UofT.md
       - ECE Meng@Waterloo: ECE Meng@Waterloo.md
-    - C+:
+    - B:
       - MSECS@JHU: MSECS@JHU.md
       - CS General@NEU: CS General@NEU.md
       - MSCS@NYU Tandon: MSCS@NYU Tandon.md
-    - C:
+    - B-:
       - MSCSE@OSU: MSCSE@OSU.md
       - MSCSE@PSU: MSCSE@PSU.md
       - MSCS@UCD: MSCS@UCD.md
@@ -123,7 +123,7 @@ nav:
       - ECE@Duke-Kunshan: ECE@Duke-Kunshan.md
       - ECE@GaTech-Shenzhen: ECE@GaTech-Shenzhen.md
       - CE@NYU Tandon: CE@NYU Tandon.md
-    - C-:
+    - C+:
       - MSCS@BU: MSCS@BU.md
       - MSCS@Emory: MSCS@Emory.md
       - MSCS@Rutgers: MSCS@Rutgers.md
@@ -132,7 +132,7 @@ nav:
       - MSCS@UTD: MSCS@UTD.md
       - MSCS@Vanderbilt: MSCS@Vanderbilt.md
       - IS@NEU: IS@NEU.md
-    - D+:
+    - C:
       - MSCS@BC: MSCS@BC.md
       - MSCS@GWU: MSCS@GWU.md
       - MSCS@SIT: MSCS@SIT.md
