--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -149,7 +149,7 @@ nav:
       - MSCS@SCU: MSCS@SCU.md
       - MSCS@Syracuse: MSCS@Syracuse.md
       - MPCS@UChicago: MPCS@UChicago.md
-      - MISM@UIUC: MISM@UIUC.md
+      - MSIM@UIUC: MSIM@UIUC.md
       - MCIT@UPenn: MCIT@UPenn.md
       - CS37@USC: CS37@USC.md
     - CS选校之禅: CS选校之禅.md
