--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -80,6 +80,7 @@ nav:
       - MSCS@UCSB: MSCS@UCSB.md
       - DS@Columbia: DS@Columbia.md
       - CSDA@Dartmouth: CSDA@Dartmouth.md
+      - CGGT@UPenn: CGGT@UPenn.md
       - ECE@GaTech: ECE@GaTech.md
       - ECE Meng@UIUC: ECE Meng@UIUC.md
       - DS@UMich: DS@UMich.md
