--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -153,6 +153,7 @@ nav:
       - MSIM@UIUC: MSIM@UIUC.md
       - MCIT@UPenn: MCIT@UPenn.md
       - CS37@USC: CS37@USC.md
+    - 飞跃手册外部链接: 飞跃手册.md
     - CS选校之禅: CS选校之禅.md
     - 贡献者: 贡献者.md
 extra:
