--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,7 +48,7 @@ nav:
       - EE@Stanford: EE@Stanford.md
       - ICME@Stanford: ICME@Stanford.md
     - S:
-      - CS@Cornell Tech: CS@Cornell Tech.md
+      - CS Meng@Cornell Tech: CS Meng@Cornell Tech.md
       - MCDS@CMU: MCDS@CMU.md
       - MIIS@CMU: MIIS@CMU.md
       - MSAII@CMU: MSAII@CMU.md
