--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,6 +2,7 @@ site_name: CS Masters Application
 site_author: 'CS-Masters-Application'
 copyright: '&copy; 2022 CS-Masters-Application'
 theme:
+  logo: assets/images/favicon_fa.png
   favicon: images/favicon_fa.png
   name: material
   custom_dir: overrides
