--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,4 +14,5 @@ jobs:
         with:
           python-version: 3.x
       - run: pip install mkdocs-material 
+      - run: python ./script.py
       - run: mkdocs gh-deploy --force
