--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,132 +32,7 @@ nav:
     - Home: index.md
     - 使用指南: 使用指南.md
     - 选校梯度: 选校梯度.md
-    - SSS: 
-      - MSECS@Princeton: MSECS@Princeton.md
-      - MSCS@Stanford: MSCS@Stanford.md
-      - MSCS@UT-Austin: MSCS@UT-Austin.md
-      - CSE@MIT: CSE@MIT.md
-    - SS:
-      - MLT@CMU: MLT@CMU.md
-      - MSCS@CMU: MSCS@CMU.md
-      - MSR@CMU: MSR@CMU.md
-      - CS Meng@Cornell: CS Meng@Cornell.md
-      - MSCS@UCLA: MSCS@UCLA.md
-      - MCIS@UPenn: MCIS@UPenn.md
-      - CSE@Harvard: CSE@Harvard.md
-      - DS@Harvard: DS@Harvard.md
-      - EE@Stanford: EE@Stanford.md
-      - ICME@Stanford: ICME@Stanford.md
-    - S:
-      - MCDS@CMU: MCDS@CMU.md
-      - MIIS@CMU: MIIS@CMU.md
-      - MSAII@CMU: MSAII@CMU.md
-      - MSCV@CMU: MSCV@CMU.md
-      - MSML@CMU: MSML@CMU.md
-      - MSCS@UIUC: MSCS@UIUC.md
-      - MSCS@Yale: MSCS@Yale.md
-      - MS&E@Stanford: MS&E@Stanford.md
-      - DS@UPenn: DS@UPenn.md
-    - A+:
-      - EECS Meng@Berkeley: EECS Meng@Berkeley.md
-      - CS Meng@Cornell Tech: CS Meng@Cornell Tech.md
-      - MSIN@CMU: MSIN@CMU.md
-      - MSCS@Duke: MSCS@Duke.md
-      - MSCS@GaTech: MSCS@GaTech.md
-      - CS75@UCSD: CS75@UCSD.md
-      - MMath-course@Waterloo: MMath-course@Waterloo.md
-      - ECE@UT Austin: ECE@UT Austin.md
-    - A:
-      - ScM CS@Brown: ScM CS@Brown.md
-      - MSCS@Columbia: MSCS@Columbia.md
-      - CM@Cornell Tech: CM@Cornell Tech.md
-      - MCS@UIUC: MCS@UIUC.md
-      - MSCSE@UMich: MSCSE@UMich.md
-      - MScAc@UofT: MScAc@UofT.md
-      - ECE@CMU: ECE@CMU.md
-      - ECE Meng@UBC: ECE Meng@UBC.md
-      - MDSAI@Waterloo: MDSAI@Waterloo.md
-    - A-:
-      - SESV@CMU: SESV@CMU.md
-      - MSCS@Dartmouth: MSCS@Dartmouth.md
-      - CSE@GaTech: CSE@GaTech.md
-      - MSCS@NWU: MSCS@NWU.md
-      - MSCS@UCSB: MSCS@UCSB.md
-      - MSMITE@CMU: MSMITE@CMU.md
-      - DS@Columbia: DS@Columbia.md
-      - CSDA@Dartmouth: CSDA@Dartmouth.md
-      - ECE@GaTech: ECE@GaTech.md
-      - ECE Meng@UIUC: ECE Meng@UIUC.md
-      - CGGT@UPenn: CGGT@UPenn.md
-      - DS@UMich: DS@UMich.md
-    - B+:
-      - MSE-SS@CMU: MSE-SS@CMU.md
-      - MISM@CMU: MISM@CMU.md
-      - MSCS@NYU Courant: MSCS@NYU Courant.md
-      - MCS@Rice: MCS@Rice.md
-      - MSc@SFU: MSc@SFU.md
-      - MCS@TAMU: MCS@TAMU.md
-      - MCS@UCI: MCS@UCI.md
-      - CS28@USC: CS28@USC.md
-      - CS-PMP@UWM: CS-PMP@UWM.md
-      - ECE MEng@Cornell: ECE MEng@Cornell.md
-      - MPS-IS@Cornell: MPS-IS@Cornell.md
-      - ECE@Duke: ECE@Duke.md
-      - MEng@UCLA: MEng@UCLA.md
-      - EC79@UCSD: EC79@UCSD.md
-      - EC82@UCSD: EC82@UCSD.md
-      - EC93@UCSD: EC93@UCSD.md
-      - ECE Meng@UofT: ECE Meng@UofT.md
-      - ECE Meng@Waterloo: ECE Meng@Waterloo.md
-    - B:
-      - MSECS@JHU: MSECS@JHU.md
-      - CS General@NEU: CS General@NEU.md
-      - MSCS@NYU Tandon: MSCS@NYU Tandon.md
-    - B-:
-      - MSCSE@OSU: MSCSE@OSU.md
-      - MSCSE@PSU: MSCSE@PSU.md
-      - MSCS@UCD: MSCS@UCD.md
-      - MSWE@UCI: MSWE@UCI.md
-      - NetSys@UCI: NetSys@UCI.md
-      - MSCS@UCSC: MSCS@UCSC.md
-      - MSCS@UF: MSCS@UF.md
-      - MSCS@UMass: MSCS@UMass.md
-      - MSCS@UMN: MSCS@UMN.md
-      - MCS@UVa: MCS@UVa.md
-      - MSCS@UVa: MSCS@UVa.md
-      - MSCS@WUSTL: MSCS@WUSTL.md
-      - ECE@Duke-Kunshan: ECE@Duke-Kunshan.md
-      - ECE@GaTech-Shenzhen: ECE@GaTech-Shenzhen.md
-      - CE@NYU Tandon: CE@NYU Tandon.md
-    - C+:
-      - MSCS@BU: MSCS@BU.md
-      - MSCS@Emory: MSCS@Emory.md
-      - MSCS@Rutgers: MSCS@Rutgers.md
-      - MSCS@SBU: MSCS@SBU.md
-      - MSCS@Tufts: MSCS@Tufts.md
-      - MSCS@UTD: MSCS@UTD.md
-      - MSCS@Vanderbilt: MSCS@Vanderbilt.md
-      - IS@NEU: IS@NEU.md
-    - C:
-      - MSCS@BC: MSCS@BC.md
-      - MSCS@GWU: MSCS@GWU.md
-      - MSCS@SIT: MSCS@SIT.md
-    - 陆本黑洞:
-      - MSCS@Berkeley: MSCS@Berkeley.md
-      - MSCS@Cornell: MSCS@Cornell.md
-      - MSCS@Purdue: MSCS@Purdue.md
-      - MSc@UofT: MSc@UofT.md
-      - MSCS@UWM: MSCS@UWM.md
-    - 零基础转码项目:
-      - MSCS@Brandeis: MSCS@Brandeis.md
-      - CS Align@NEU: CS Align@NEU.md
-      - ISB@NEU: ISB@NEU.md
-      - MSCS@SCU: MSCS@SCU.md
-      - MSCS@Syracuse: MSCS@Syracuse.md
-      - MPCS@UChicago: MPCS@UChicago.md
-      - MSIM@UIUC: MSIM@UIUC.md
-      - MCIT@UPenn: MCIT@UPenn.md
-      - CS37@USC: CS37@USC.md
+$programs_list
     - 飞跃手册外部链接: 飞跃手册.md
     - CS选校之禅: CS选校之禅.md
     - 贡献者: 贡献者.md
