--- a/programs_list.yml
+++ b/programs_list.yml
@@ -147,6 +147,11 @@
       - MPCS@UChicago
       - MCIT@UPenn
       - CS37@USC
+      - MSWE@UCI
+      - PCP@UWM
+      - MSCS@SMU
+      - MSCS@Utah
     NONCS:
       - ISB@NEU
       - MSIM@UIUC
+      - MSIS@UNC
