--- a/programs_list.yml
+++ b/programs_list.yml
@@ -92,7 +92,7 @@
     CS:
       - MSECS@JHU
       - CS General@NEU
-      - MSCS@UCSC
+      - MSCSE@UCSC
     NONCS:
       - ECE Meng@UofT
       - ECE Meng@Waterloo
