--- a/programs_list.yml
+++ b/programs_list.yml
@@ -109,6 +109,7 @@
       - MSCS@UVa
       - MSCS@Rutgers
       - MSCS@WUSTL
+      - MCS@NCSU
     NONCS:
       - ECE@Duke-Kunshan
       - ECE@GaTech-Shenzhen
