--- a/programs_list.yml
+++ b/programs_list.yml
@@ -37,7 +37,7 @@
       - MSIN@CMU
       - MSCS@Duke
       - MSCS@GaTech
-      - MMath-course@Waterloo
+      - MMath@Waterloo
     NONCS:
       - ECE@UT Austin
 - A:
