--- a/programs_list.yml
+++ b/programs_list.yml
@@ -122,7 +122,7 @@
       - MSCS@Tufts
       - MSCS@UTD
       - MSCS@Vanderbilt
-      - MengCS@VT
+      - CS Meng@VT
     NONCS:
       - IS@NEU
 - C:
