--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,6 +43,8 @@ extra:
   social:
     - icon: fontawesome/brands/qq
       link: https://jq.qq.com/?_wv=1027&k=Ikr0DObs
+    - icon: fontawesome/brands/discord
+      link: https://discord.gg/HeB9QXZdFR
   analytics:
     provider: google
     property: G-MWWFQ6MJG4
