--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,6 +39,7 @@ $programs_list
     - 飞跃手册外部链接: 飞跃手册.md
     - CS选校之禅: CS选校之禅.md
     - 贡献者: 贡献者.md
+    - 赞赏计划: 赞赏计划.md
 extra:
   homepage: /选校梯度/
   social:
