--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,7 +44,7 @@ extra:
   homepage: /选校梯度/
   social:
     - icon: fontawesome/brands/qq
-      link: https://jq.qq.com/?_wv=1027&k=Bx7hEAfh
+      link: https://jq.qq.com/?_wv=1027&k=yAmXwWYl
     - icon: fontawesome/brands/discord
       link: https://discord.gg/HeB9QXZdFR
   analytics:
