--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,7 +36,7 @@ nav:
     - 使用指南: 使用指南.md
     - 选校梯度: 选校梯度.md
 $programs_list
-    - 飞跃手册外部链接: 飞跃手册.md
+    - 外部链接: 外部链接.md
     - CS选校之禅: CS选校之禅.md
     - 贡献者: 贡献者.md
     - 赞赏计划: 赞赏计划.md
