--- a/programs_list.yml
+++ b/programs_list.yml
@@ -75,7 +75,7 @@
       - MSCS@NYU Courant
       - MSCS@NYU Tandon
       - MCS@Rice
-      - MSc@SFU
+      - MPCS@SFU
       - MCS@TAMU
       - MCS@UCI
       - CS28@USC
