--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,8 @@ theme:
     primary: blue
     accent: amber
   features:
+    - navigation.tabs
+    - navigation.tabs.sticky
     - navigation.top
     - toc.follow
     - navigation.instant
@@ -31,15 +33,19 @@ markdown_extensions:
       emoji_index: !!python/name:materialx.emoji.twemoji
       emoji_generator: !!python/name:materialx.emoji.to_svg
 nav:
-    - Home: index.md
-    - 内容征集: 内容征集.md
-    - 使用指南: 使用指南.md
-    - 选校梯度: 选校梯度.md
-$programs_list
-    - 外部链接: 外部链接.md
-    - CS选校之禅: CS选校之禅.md
-    - 贡献者: 贡献者.md
-    - 赞赏计划: 赞赏计划.md
+  - CS Masters Application:
+      - Home: index.md
+      - 内容征集: 内容征集.md
+      - 使用指南: 使用指南.md
+      - 选校梯度: 选校梯度.md
+  $programs_list
+      - 外部链接: 外部链接.md
+      - CS选校之禅: CS选校之禅.md
+      - 贡献者: 贡献者.md
+      - 赞赏计划: 赞赏计划.md
+  - DataPoints:
+      - dp汇总表: dp汇总表.md
+      - 提交新dp: 提交新dp.md
 extra:
   homepage: /选校梯度/
   social:
