--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,7 +44,11 @@ $programs_list
     - 贡献者: 贡献者.md
     - 赞赏计划: 赞赏计划.md
   - DataPoints: DataPoints.md
-  - 提交DataPoints: 提交DataPoints.md
+  - 提交DataPoints:
+    - 提交指引: 提交DataPoints.md
+    - 申请者信息收集表: 申请者信息收集表.md
+    - DataPoints收集表: DataPoints收集表.md
+    - 提交新项目: 提交新项目.md
 extra:
   homepage: /选校梯度/
   social:
