--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,7 +43,7 @@ $programs_list
     - CS选校之禅: CS选校之禅.md
     - 贡献者: 贡献者.md
     - 赞赏计划: 赞赏计划.md
-  - DataPoints: DataPoints.md
+  - datapoints&copy: DataPoints.md
   - 提交DataPoints:
     - 提交指引: 提交DataPoints.md
     - 申请者信息收集表: 申请者信息收集表.md
