--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,7 +48,7 @@ $programs_list
     - Home: datapoints_submit.md
     - 申请者信息收集表: 申请者信息收集表.md
     - DataPoints&copy收集表: DataPoints收集表.md
-    - 添加新项目: 提交新项目.md
+    - 添加新项目: 添加新项目.md
 extra:
   homepage: /选校梯度/
   social:
