--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,6 +59,16 @@ extra:
   analytics:
     provider: google
     property: G-MWWFQ6MJG4
+  consent:
+    title: Cookie consent
+    description: >- 
+      We use cookies to recognize your repeated visits and preferences, as well
+      as to measure the effectiveness of our documentation and whether users
+      find what they're searching for. With your consent, you're helping us to
+      make our documentation better.
+    actions:
+      - accept
+      - manage 
 repo_url: https://github.com/csmsapp/csmsapp.github.io
 repo_name: csmsapp
 edit_uri: edit/master/docs/
