--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,6 +43,7 @@ $programs_list
     - CS选校之禅: CS选校之禅.md
     - 贡献者: 贡献者.md
     - 赞赏计划: 赞赏计划.md
+  - 项目信息表: program_info.md
   - DataPoints&copy: datapoints.md
   - DataPoints&copy提交:
     - Home: datapoints_submit.md
