--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,7 +48,8 @@ $programs_list
   - DataPoints&copy提交:
     - Home: datapoints_submit.md
     - 申请者信息收集表: 申请者信息收集表.md
-    - DataPoints&copy收集表: DataPoints收集表.md
+    - DataPoints收集表: DataPoints收集表.md
+    - Progress收集表: Progress收集表.md
     - 添加新项目: 添加新项目.md
 extra:
   homepage: /选校梯度/
