--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,6 +39,7 @@ nav:
     - 使用指南: 使用指南.md
     - 选校梯度: 选校梯度.md
 $programs_list
+    - 申请FAQ: faq.md
     - 外部链接: 外部链接.md
     - CS选校之禅: CS选校之禅.md
     - 贡献者: 贡献者.md
