--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,10 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check source code
-        uses: actions/checkout@main
+        uses: actions/checkout@v2
       - name: AutoCorrect
         uses: huacnlee/autocorrect-action@main
-      - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
           python-version: 3.x
