--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,25 +35,25 @@ markdown_extensions:
 nav:
   - CS Masters Application:
     - Home: index.md
-    - 内容征集: 内容征集.md
-    - 使用指南: 使用指南.md
-    - 选校梯度: 选校梯度.md
+    - 内容征集: contribute.md
+    - 使用指南: guide.md
+    - 选校梯度: grade.md
 $programs_list
     - 申请FAQ: faq.md
-    - 外部链接: 外部链接.md
-    - CS选校之禅: CS选校之禅.md
-    - 贡献者: 贡献者.md
-    - 赞赏计划: 赞赏计划.md
+    - 外部链接: link.md
+    - CS选校之禅: zen.md
+    - 贡献者: contributor.md
+    - 赞赏计划: sponsor.md
   - 项目信息表: program_info.md
   - DataPoints&copy: datapoints.md
   - DataPoints&copy提交:
-    - Home: datapoints_submit.md
-    - DataPoints收集表: DataPoints收集表.md
-    - Progress收集表: Progress收集表.md
-    - 申请者信息收集表: 申请者信息收集表.md
-    - 添加新项目: 添加新项目.md
+    - Home: submit.md
+    - DataPoints收集表: newdatapoints.md
+    - Progress收集表: newprogress.md
+    - 申请者信息收集表: newapplicant.md
+    - 添加新项目: newprogram.md
 extra:
-  homepage: /选校梯度/
+  homepage: /grade/
   social:
     - icon: fontawesome/brands/qq
       link: https://jq.qq.com/?_wv=1027&k=yAmXwWYl
