--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,6 +38,10 @@ markdown_extensions:
   - pymdownx.emoji:
       emoji_index: !!python/name:materialx.emoji.twemoji
       emoji_generator: !!python/name:materialx.emoji.to_svg
+
+plugins:
+  - glightbox
+
 nav:
   - CS Masters Application:
     - Home: index.md
