--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,7 @@ markdown_extensions:
   - attr_list
   - md_in_html
   - admonition
+  - tables
   - pymdownx.caret
   - pymdownx.mark
   - pymdownx.tilde
