--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,8 +53,8 @@ nav:
     - 使用指南: guide.md
     - 选校梯度: grade.md
 $programs_list
-    - 经验分享:
-      - 索引: blog.md
+    - 经验分享: blog.md
+    - Blog:
 $blogs_list
     - 申请FAQ: faq.md
     - 外部链接: link.md
