--- a/programs_list.yml
+++ b/programs_list.yml
@@ -133,6 +133,13 @@
       - IS@Pitt
 - 待分类:
     CS:
+      - MSWE@UCI
+      - PCP@UWM
+      - MSCS@SMU
+      - MSCS@Utah
+      - MSCS@SCU
+      - MSCS@Syracuse
+      - MPCS@UChicago
       - Two-Year MSCS@Yale
       - MSCS@UWM
     NONCS:
