--- a/programs_list.yml
+++ b/programs_list.yml
@@ -80,7 +80,7 @@
       - MCS@TAMU
       - MCS@UCI
       - CS28@USC
-      - CS-PMP@UWM
+      - CS-PMP@Wisc
     NONCS:
       - MISM@CMU
       - ECE MEng@Cornell
@@ -135,14 +135,14 @@
 - 待分类:
     CS:
       - MSWE@UCI
-      - PCP@UWM
+      - PCP@Wisc
       - MSCS@SMU
       - MSCS@Utah
       - MSCS@SCU
       - MSCS@Syracuse
       - MPCS@UChicago
       - Two-Year MSCS@Yale
-      - MSCS@UWM
+      - MSCS@Wsic
     NONCS:
 - 陆本黑洞:
     CS:
@@ -161,7 +161,7 @@
       - MCIT@UPenn
       - CS37@USC
       - MSWE@UCI
-      - PCP@UWM
+      - PCP@Wsic
       - MSCS@SMU
       - MSCS@Utah
     NONCS:
