--- a/programs_list.yml
+++ b/programs_list.yml
@@ -142,7 +142,7 @@
       - MSCS@Syracuse
       - MPCS@UChicago
       - Two-Year MSCS@Yale
-      - MSCS@Wsic
+      - MSCS@Wisc
     NONCS:
 - 陆本黑洞:
     CS:
@@ -161,7 +161,7 @@
       - MCIT@UPenn
       - CS37@USC
       - MSWE@UCI
-      - PCP@Wsic
+      - PCP@Wisc
       - MSCS@SMU
       - MSCS@Utah
     NONCS:
