--- a/programs_list.yml
+++ b/programs_list.yml
@@ -110,6 +110,7 @@
       - MSCS@Rutgers
       - MSCS@WUSTL
       - MCS@NCSU
+      - EE-PMP@UW
     NONCS:
       - ECE@Duke-Kunshan
       - ECE@GaTech-Shenzhen
