--- a/programs_list.yml
+++ b/programs_list.yml
@@ -83,6 +83,7 @@
       - CS28@USC
       - CS-PMP@Wisc
     NONCS:
+      - DS75@UCSD
       - MISM@CMU
       - ECE MEng@Cornell
       - ECE Meng@UIUC
