--- a/programs_list.yml
+++ b/programs_list.yml
@@ -32,6 +32,7 @@
       - EE@Stanford
       - MS&E@Stanford
       - DS@UPenn
+      - ECE Meng(coop)@Waterloo
 - A+:
     CS:
       - One-Year MSCS@Yale
