--- a/programs_list.yml
+++ b/programs_list.yml
@@ -92,6 +92,7 @@
       - MSECS@JHU
       - CS General@NEU
       - MSCSE@UCSC
+      - MSCS&SE@UWB
     NONCS:
       - ECE Meng@UofT
       - ECE Meng@Waterloo
@@ -111,6 +112,7 @@
       - MSCS@WUSTL
       - MCS@NCSU
       - EE-PMP@UW
+      - MSCSS@UWT
     NONCS:
       - ECE@Duke-Kunshan
       - ECE@GaTech-Shenzhen
