--- a/programs_list.yml
+++ b/programs_list.yml
@@ -101,7 +101,6 @@
       - MSCSE@UCSC
       - MSCS&SE@UWB
       - NetSys@UCI
-      - MSECS@JHU
     NONCS:
       - ECE Meng@UofT
       - ECE Meng@Waterloo
@@ -128,6 +127,7 @@
       - CE@NYU Tandon
 - C+:
     CS:
+      - MSECS@JHU
       - MSCS@BU
       - MSCS@Emory
       - MSCS@SBU
@@ -136,6 +136,7 @@
       - MSCS@Vanderbilt
       - CS Meng@VT
     NONCS:
+      - EE@Upenn
       - IS@NEU
 - C:
     CS:
@@ -143,6 +144,8 @@
       - MSCS@GWU
       - MSCS@SIT
     NONCS:
+      - SPS-AA@Columbia
+      - IS@JHU
       - IS@Pitt
 - 待分类:
     CS:
