--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,7 +53,7 @@ nav:
     - 使用指南: guide.md
     - 选校梯度: grade.md
 $programs_list
-    - 经验分享: blog.md
+    - Blog: blog.md
     - PhD申请: phdinfo.md
     - 申请FAQ: faq.md
     - 外部链接: link.md
