--- a/blogs_list.yml
+++ b/blogs_list.yml
@@ -2,3 +2,4 @@
 - 2023fall CS PhD 美国申请总结 by Flash
 - 北美CS PhD申请回忆 by denghilbert
 - CS PhD&Master F1签证 by denghilbert
+- 加拿大study permit安调情况 by Flash
