--- a/programs_list.yml
+++ b/programs_list.yml
@@ -125,6 +125,8 @@
       - ECE@Duke-Kunshan
       - ECE@GaTech-Shenzhen
       - CE@NYU Tandon
+      - VC@SFU
+      - Cybersecurity@SFU
 - C+:
     CS:
       - MSCS@BU
