Rename: ECE MEng@uOttawa

--- a/programs_list.yml
+++ b/programs_list.yml
@@ -124,7 +124,7 @@
     NONCS:
       - ECE@Duke-Kunshan
       - ECE@GaTech-Shenzhen
-      - ECE@uOttawa
+      - ECE MEng@uOttawa
       - CE@NYU Tandon
 - C+:
     CS:
