Rename: Visual Computing

--- a/programs_list.yml
+++ b/programs_list.yml
@@ -126,7 +126,7 @@
       - ECE@GaTech-Shenzhen
       - ECE MEng@uOttawa
       - CE@NYU Tandon
-      - VC@SFU
+      - Visual Computing@SFU
       - Cybersecurity@SFU
       - MSIS@NYU Courant
 - C+:
