--- a/programs_list.yml
+++ b/programs_list.yml
@@ -101,6 +101,7 @@
       - MSCS&SE@UWB
       - NetSys@UCI
       - MSECS@JHU
+      - MCS@uOttawa
     NONCS:
       - ECE Meng@UofT
       - ECE Meng@Waterloo
