--- a/programs_list.yml
+++ b/programs_list.yml
@@ -102,6 +102,7 @@
       - NetSys@UCI
       - MSECS@JHU
       - MCS@uOttawa
+      - MSCS@Western
     NONCS:
       - ECE Meng@UofT
       - ECE Meng@Waterloo
