New: ECE MEng@Western

--- a/programs_list.yml
+++ b/programs_list.yml
@@ -127,6 +127,7 @@
       - ECE@Duke-Kunshan
       - ECE@GaTech-Shenzhen
       - ECE MEng@uOttawa
+      - ECE MEng@Western
       - CE@NYU Tandon
       - Visual Computing@SFU
       - Cybersecurity@SFU
