New: ECE MEng@uAlberta

--- a/programs_list.yml
+++ b/programs_list.yml
@@ -128,6 +128,7 @@
       - ECE@GaTech-Shenzhen
       - ECE MEng@uOttawa
       - ECE MEng@Western
+      - ECE MEng@uAlberta
       - CE@NYU Tandon
       - Visual Computing@SFU
       - Cybersecurity@SFU
