New: MEng Soft@uCalgary

--- a/programs_list.yml
+++ b/programs_list.yml
@@ -107,6 +107,7 @@
     NONCS:
       - ECE Meng@UofT
       - ECE Meng@Waterloo
+      - MEng Soft@uCalgary
       - MSIM@UIUC
       - MI@UofT
 - B-:
