--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,6 +47,10 @@ plugins:
   - glightbox:
       loop: true
       zoomable: true
+  - git-revision-date-localized:
+      enable_creation_date: true
+      type: timeago
+      enable_creation_date: true
 
 nav:
   - Open CS Application:
