--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,9 +9,9 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
-          fetch-depth: '0'
+          fetch-depth: 0
       - name: Check source code
         uses: actions/checkout@v2
       - uses: actions/setup-python@v2
