--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,5 +24,6 @@ jobs:
       - run: pip install mkdocs-material
       - run: pip install mkdocs-glightbox
       - run: pip install mkdocs-git-revision-date-localized-plugin
+      - run: pip install pillow cairosvg
       - run: python ./script.py
       - run: mkdocs gh-deploy --force
