feat: SFU split && UW EE description

--- a/programs_list.yml
+++ b/programs_list.yml
@@ -83,7 +83,6 @@
       - MSE-SS@CMU
       - MSCS@NYU Courant
       - MSCS@NYU Tandon
-      - MPCS@SFU
       - MCS@TAMU
       - MSWE@UCI
       - CS28@USC
@@ -115,6 +114,7 @@
       - MI@UofT
       - Visual Computing@SFU
       - Cybersecurity@SFU
+      - Big Data@SFU
 - B-:
     CS:
       - MSCSE@OSU
