--- a/blogs_list.yml
+++ b/blogs_list.yml
@@ -1,5 +1,5 @@
 - 22fall申请季总结 by Flash
 - 2023fall CS PhD 美国申请总结 by Flash
 - 北美CS PhD申请回忆 by denghilbert
-- CS PhD&Master F1签证 by denghilbert
+- CS PhD&Master F1签证
 - 加拿大study permit安调情况 by Flash
