--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,7 +61,7 @@ nav:
 $programs_list
     - Blog: blog.md
     - PhD申请: phdinfo.md
-    - 申请FAQ: faq.md
+    - FAQ: faq.md
     - 外部链接: link.md
     - CS选校之禅: zen.md
     - 赞赏计划: sponsor.md
