--- a/programs_list.yml
+++ b/programs_list.yml
@@ -84,6 +84,7 @@
       - MSCS@NYU Courant
       - MSCS@NYU Tandon
       - MCS@TAMU
+      - MSCS@TAMU
       - MSWE@UCI
       - CS28@USC
       - MSCS@uAlberta
