--- a/programs_list.yml
+++ b/programs_list.yml
@@ -42,6 +42,7 @@
       - MSCS@GaTech
       - MSCS@NWU
       - MCS@UIUC
+      - MSCS@UBC
       - MMath@Waterloo
     NONCS:
       - ECE Meng(coop)@Waterloo
