--- a/programs_list.yml
+++ b/programs_list.yml
@@ -44,6 +44,7 @@
       - MCS@UIUC
       - MSCS@UBC
       - MMath@Waterloo
+      - MPhil-CSE@HKUST
     NONCS:
       - ECE Meng(coop)@Waterloo
       - ECE@UT Austin
