--- a/programs_list.yml
+++ b/programs_list.yml
@@ -45,6 +45,7 @@
       - MSCS@UBC
       - MMath@Waterloo
       - MPhil-CSE@HKUST
+      - MSCS@UMD
     NONCS:
       - ECE Meng(coop)@Waterloo
       - ECE@UT Austin
