--- a/programs_list.yml
+++ b/programs_list.yml
@@ -135,6 +135,7 @@
       - MCS@NCSU
       - EE-PMP@UW
       - MSCSS@UWT
+      - MACS@Dalhousie
     NONCS:
       - ECE@Duke-Kunshan
       - ECE@GaTech-Shenzhen
