--- a/programs_list.yml
+++ b/programs_list.yml
@@ -115,6 +115,7 @@
       - CE MEng@TAMU
       - MCS@UVa
       - MSCS@UVa
+      - MSCS@Virginia Tech
     NONCS:
       - ECE Meng@UofT
       - ECE Meng@Waterloo
