--- a/programs_list.yml
+++ b/programs_list.yml
@@ -168,7 +168,7 @@
       - PCP@Wisc
       - CS-PMP@Wisc
       - MSCS@SMU
-      - MSCS@Utah
+      - MCS@Utah
       - MSCS@SCU
       - MSCS@Syracuse
     NONCS:
