--- a/programs_list.yml
+++ b/programs_list.yml
@@ -116,6 +116,7 @@
       - MCS@UVa
       - MSCS@UVa
       - MSCS@Virginia Tech
+      - CAS MEng@McMaster
     NONCS:
       - ECE Meng@UofT
       - ECE Meng@Waterloo
