--- a/programs_list.yml
+++ b/programs_list.yml
@@ -11,6 +11,7 @@
       - MSML@CMU
       - MSR@CMU
       - MCIS@UPenn
+      - MSE in Robotics@UPenn
       - MSCS@UT-Austin
       - Two-Year MSCS@Yale
     NONCS:
