--- a/programs_list.yml
+++ b/programs_list.yml
@@ -175,6 +175,8 @@
       - MSCS@Syracuse
     NONCS:
       - MSECE@UIUC
+      - Cybersecurity@GaTech
+      - MSSI@JHU
 - 陆本黑洞:
     CS:
       - MSCS@Berkeley
